--- a/weaviate/notebooks/samsung/1_extraction_chain.ipynb
+++ b/weaviate/notebooks/samsung/1_extraction_chain.ipynb
@@ -183,9 +183,11 @@
     "\n",
     "config = {\n",
     "  'SM_NUM_GPUS': json.dumps(num_gpus), # Number of GPU used per replica\n",
-    "  'MAX_INPUT_LENGTH': json.dumps(20024),  # Max length of input text\n",
-    "  'MAX_TOTAL_TOKENS': json.dumps(20048),  # Max length of the generation (including input text)\n",
-    "  'MAX_CONCURRENT_REQUESTS': json.dumps(1) # uncomment to limit OOM errors #https://github.com/aws/amazon-sagemaker-examples/blob/main/introduction_to_amazon_algorithms/jumpstart-foundation-models/text-generation-falcon.ipynb\n",
+    "  'MAX_INPUT_LENGTH': json.dumps(10012),\n",
+    "  'MAX_BATCH_PREFILL_TOKENS': json.dumps(10024),\n",
+    "  'MAX_BATCH_TOTAL_TOKENS': json.dumps(10024),\n",
+    "  'MAX_TOTAL_TOKENS': json.dumps(10024),  # Max length of the generation (including input text)\n",
+    "  'MAX_CONCURRENT_REQUESTS': json.dumps(1) # limit OOM errors https://github.com/aws/amazon-sagemaker-examples/blob/main/introduction_to_amazon_algorithms/jumpstart-foundation-models/text-generation-falcon.ipynb\n",
     "}"
    ]
   },
