--- a/weaviate/notebooks/samsung/3_upload.ipynb
+++ b/weaviate/notebooks/samsung/3_upload.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network_load_balancer = ''"
+    "elb_endpoint = ''"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# Instantiate the client\n",
-    "wv_client = weaviate.Client(url=f\"http://{network_load_balancer}\")"
+    "wv_client = weaviate.Client(url=f\"http://{elb_endpoint}\")"
    ]
   },
   {
