--- a/weaviate/notebooks/samsung/6_RAG_EnglishToWV.ipynb
+++ b/weaviate/notebooks/samsung/6_RAG_EnglishToWV.ipynb
@@ -74,7 +74,7 @@
    },
    "outputs": [],
    "source": [
-    "network_load_balancer = ''"
+    "elb_endpoint = ''"
    ]
   },
   {
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "wv_client = weaviate.Client(url=f\"http://{network_load_balancer}\")"
+    "wv_client = weaviate.Client(url=f\"http://{elb_endpoint}\")"
    ]
   },
   {
