--- a/weaviate/notebooks/samsung/2_schema.ipynb
+++ b/weaviate/notebooks/samsung/2_schema.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "network_load_balancer = ''"
+    "elb_endpoint = ''"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Instantiate the client\n",
-    "wv_client = weaviate.Client(url=f\"http://{network_load_balancer}\")"
+    "wv_client = weaviate.Client(url=f\"http://{elb_endpoint}\")"
    ]
   },
   {
