--- a/weaviate/notebooks/samsung/4_query.ipynb
+++ b/weaviate/notebooks/samsung/4_query.ipynb
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "network_load_balancer = ''"
+    "elb_endpoint = ''"
    ]
   },
   {
@@ -70,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "wv_client = weaviate.Client(url=f\"http://{network_load_balancer}\")"
+    "wv_client = weaviate.Client(url=f\"http://{elb_endpoint}\")"
    ]
   },
   {
