--- a/weaviate/notebooks/samsung/5_RAG_QnA.ipynb
+++ b/weaviate/notebooks/samsung/5_RAG_QnA.ipynb
@@ -92,7 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "network_load_balancer = ''"
+    "elb_endpoint = ''"
    ]
   },
   {
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "wv_client = weaviate.Client(url=f\"http://{network_load_balancer}\")"
+    "wv_client = weaviate.Client(url=f\"http://{elb_endpoint}\")"
    ]
   },
   {
